--- a/mainPage/login.html
+++ b/mainPage/login.html
@@ -24,11 +24,11 @@
             <label>
                 <input type="checkbox">Remember me
             </label>
-            <a href="/mainPage - Copy/changepass.html"> Forgot password? </a>
+            <a href="changepass.html"> Forgot password? </a>
         </div>
             <input type="submit" class="btn" value="Login">
             <div class="regester-link">
-                <p>Don't have an account? <a href="/mainPage - Copy/signUp.html">Register</a></p>
+                <p>Don't have an account? <a href="signUp.html">Register</a></p>
             </div>
     </form>
     </div>
