--- a/mainPage/index.html
+++ b/mainPage/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EnerGya</title>
-    <link rel="icon" type="img/png" href="/mainPage/assets/logo.png" />
+    <link rel="icon" type="img/png" href="./assets/logo.png" />
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
@@ -24,7 +24,7 @@
         <div class="right">
           <a href="#contact" class="links">CONTACT</a>
           <a href="#plan-nav" class="links">PACKAGES</a>
-          <a href="/mainPage - Copy/login.html" id="login">LOG IN</a>
+          <a href="login.html" id="login">LOG IN</a>
         </div>
       </div>
       <div class="logo-container">
